objects/Employee__c.object
<CustomObject>
    <description>Everyone who has an employee relationship with any of our clients, whether they took the survey during the application process, or were hired.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The client account that this employee (whether or not actually employed) belongs to.</description>
        <inlineHelpText>The client account that this employee (whether or not actually employed) belongs to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>AccountEmployees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <description>The employee&apos;s date of birth.</description>
        <inlineHelpText>The employee&apos;s date of birth.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientEmployeeID__c</fullName>
        <description>The employee ID used by the client in their system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The employee ID used by the client in their system.</inlineHelpText>
        <label>Client Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployedBitFormula__c</fullName>
        <description>Indicates whether this person is currently employed. A &quot;1&quot; value means yes, &quot;0&quot; means no.</description>
        <formula>IF(isblank(LatestStartDateSummary__c ), 0, if( ISBLANK(LatestEndDateSummary__c),  1,  IF(LatestEndDateSummary__c &gt; LatestStartDateSummary__c    , 0, 1) ))</formula>
        <inlineHelpText>Indicates whether this person is currently employed. A &quot;1&quot; value means yes, &quot;0&quot; means no.</inlineHelpText>
        <label>Is Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployedCodeFormula__c</fullName>
        <description>Indicates whether this person is currently employed with this client.</description>
        <formula>if( EmployedBitFormula__c ==1, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Indicates whether this person is currently employed with this client.</inlineHelpText>
        <label>Is Currently Employed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeEID__c</fullName>
        <description>The Enterprise ID for this Employee.</description>
        <inlineHelpText>The Enterprise ID for this Employee.</inlineHelpText>
        <label>Employee EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstLastNameFormula__c</fullName>
        <description>The full name of the employee in the format: first name, middle name, last name.</description>
        <formula>FirstName__c &amp; if(or(MiddleName__c==&apos;&apos; , ISBLANK(MiddleName__c)),&apos;&apos;, &apos; &apos; &amp; MiddleName__c ) &amp; &apos; &apos; &amp; LastName__c</formula>
        <inlineHelpText>The full name of the employee in the format: first name, middle name, last name.</inlineHelpText>
        <label>Full Name (first-last)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>The employee&apos;s first (given) name.</description>
        <inlineHelpText>The employee&apos;s first (given) name.</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowSession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow Session</label>
        <referenceTo>FlowSession__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormattedFullSSNFormula__c</fullName>
        <formula>LEFT(SSN__c, 3)  + &apos;-&apos; +  MID(SSN__c, 4, 2)  + &apos;-&apos; +  RIGHT(SSN__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Full SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <description>The full name of the employee, last name first.</description>
        <formula>LastName__c &amp; &apos;, &apos; &amp;  FirstName__c &amp; if(or(MiddleName__c==&apos;&apos; ,  ISBLANK(MiddleName__c)),&apos;&apos;,  &apos; &apos; &amp;  MiddleName__c )</formula>
        <inlineHelpText>The full name of the employee, last name first.</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE1EmployeeId__c</fullName>
        <description>The employee id from Incentive Engine 1</description>
        <inlineHelpText>The employee id from Incentive Engine 1</inlineHelpText>
        <label>IE1 Employee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IE2EmployeeId__c</fullName>
        <description>The EmpID from Incentive Engine 2.</description>
        <inlineHelpText>The EmpID from Incentive Engine 2.</inlineHelpText>
        <label>IE2 Employee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>The last name (surname) of the employee.</description>
        <inlineHelpText>The last name (surname) of the employee.</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestEndDateSummary__c</fullName>
        <description>The latest termination date for this employee.</description>
        <inlineHelpText>The latest termination date for this employee.</inlineHelpText>
        <label>Latest Termination Date</label>
        <summarizedField>Employment__c.EndDate__c</summarizedField>
        <summaryForeignKey>Employment__c.Employee__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LatestStartDateSummary__c</fullName>
        <description>Last employment start date for this employee.</description>
        <inlineHelpText>Last employment start date for this employee.</inlineHelpText>
        <label>Latest Hire Date</label>
        <summarizedField>Employment__c.StartDate__c</summarizedField>
        <summaryForeignKey>Employment__c.Employee__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaskedSSNFormula__c</fullName>
        <formula>&apos;***-**-&apos; &amp; right(SSN__c,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formatted SSN shows the last 4 digits of the Social Security Number.</inlineHelpText>
        <label>Masked SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <description>The employee&apos;s middle name. May be an initial. No punctuation needed.</description>
        <inlineHelpText>The employee&apos;s middle name. May be an initial. No punctuation needed.</inlineHelpText>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneCode__c</fullName>
        <description>The primary contact phone for this employee. Used in survey.</description>
        <inlineHelpText>The primary contact phone for this employee. Used in survey.</inlineHelpText>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF1EmployeeID__c</fullName>
        <description>The employee id from SF1</description>
        <inlineHelpText>The employee id from SF1</inlineHelpText>
        <label>SF1 Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>The employee&apos;s federal social security number.</description>
        <externalId>true</externalId>
        <inlineHelpText>The employee&apos;s federal social security number.</inlineHelpText>
        <label>SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerminatedRecentlyBitFormula__c</fullName>
        <description>Specifies if employee was recently terminated by this client.</description>
        <formula>if(AND(LatestEndDateSummary__c &gt;= TODAY() - 91, LatestStartDateSummary__c &lt; TODAY() -91), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies if employee was recently terminated by this client.</inlineHelpText>
        <label>Terminated Recently</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ClientEmployeeID__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>SSN__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>SSN__c</columns>
        <filterScope>Everything</filterScope>
        <label>My View</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateSSN</fullName>
        <active>false</active>
        <description>Ensures SSN is exactly nine digits and matches a Regex that allows only asterisks and numeric digits.</description>
        <errorConditionFormula>OR
(LEN (SSN__c) &lt;&gt;9,
NOT(REGEX(SSN__c,&quot;(\\*|0|[1-9])(\\*|0|[1-9])(\\*|0|[1-9])(\\*|0|[1-9])(\\*|0|[1-9])(\\*|0|[1-9])(\\*|0|[1-9])(\\*|0|[1-9])(|0|[1-9])&quot; )
))</errorConditionFormula>
        <errorMessage>OK. A real SSN has exactly nine numeric digits. We&apos;ll let you include asterisks if you don&apos;t know the full SSN, but that&apos;s all you&apos;ll get away with.</errorMessage>
    </validationRules>
</CustomObject>